# animaX

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan_profiles/: x86_64-linux-gcc11  x86_64-windows-vs2022
src/: CMakeLists.txt  application.h  main.cpp
src/application/: application.cpp  application.h
src/main/: animaX.cpp
src/mesh/: mesh.cpp  mesh.h
src/platform/: win32_main.cpp  win32_main.h
src/shader/: shader.cpp  shader.h
src/window/: window.cpp  window.h
